--- a/force-app/main/default/classes/ProgressNoteReminderControllerTest.cls
+++ b/force-app/main/default/classes/ProgressNoteReminderControllerTest.cls
@@ -1,50 +1,7 @@
 @isTest
 public class ProgressNoteReminderControllerTest {
 
-    @isTest
-    static void testGetCaseRecordType() {
-        // Fetch an existing Case RecordType
-        RecordType caseRecordType = [SELECT Id, Name FROM RecordType WHERE SObjectType = 'Case' LIMIT 1];
-	
-        // Create a Case with the fetched RecordType
-        Case testCase = new Case(
-            RecordTypeId = caseRecordType.Id,
-            Subject = 'Test Case'
-        
-        );
-        insert testCase;
-
-        // Test the getCaseRecordType method
-        Test.startTest();
-        String recordTypeName = ProgressNoteReminderController.getCaseRecordType(testCase.Id);
-        Test.stopTest();
-
-        // Verify the result
-        System.assertEquals(caseRecordType.Name, recordTypeName, 'The Record Type Name should match the test data.');
-    }
-
-    @isTest
-    static void testGetProgressNoteRecordTypeIds() {
-        // Fetch existing Progress Note RecordTypes
-        List<RecordType> progressNoteRTs = [SELECT Id, Name FROM RecordType WHERE SObjectType = 'Progress_Note__c' AND Name IN ('Medical Progress Note', 'Admin Progress Note')];
-
-        // Ensure there are exactly two record types returned
-        System.assertEquals(2, progressNoteRTs.size(), 'There should be exactly 2 Progress Note RecordTypes.');
-
-        // Test the getProgressNoteRecordTypeIds method
-        Test.startTest();
-        Map<String, Id> recordTypeMap = ProgressNoteReminderController.getProgressNoteRecordTypeIds();
-        Test.stopTest();
-
-        // Verify the results
-        System.assertNotEquals(null, recordTypeMap, 'The record type map should not be null.');
-        System.assertEquals(2, recordTypeMap.size(), 'The record type map should contain exactly 2 entries.');
-
-        // Validate record types in the map
-        for (RecordType rt : progressNoteRTs) {
-            System.assertEquals(rt.Id, recordTypeMap.get(rt.Name), 'The ID for ' + rt.Name + ' should match the test data.');
-        }
-    }
+   
 
     @isTest
     static void testCreateReminder() {
@@ -52,11 +9,6 @@ public class ProgressNoteReminderControllerTest {
         Account testAccount = new Account(Name = 'Test Account');
         insert testAccount;
 
-        // If you need to link to a custom object, create it here
-        // Encounter__c customEncounter = new Encounter__c(Name = 'Test Encounter');
-        // insert customEncounter;
-
-        // Call createReminder method
         Test.startTest();
         Id taskId = ProgressNoteReminderController.createReminder(
             'Test Subject',
@@ -64,6 +16,9 @@ public class ProgressNoteReminderControllerTest {
             testAccount.Id,  // or customEncounter.Id if used
             'Call',
             'Test comments',
+            'Reminder',
+            'High',
+            null,
             null  // or the customEncounter.Id if used
         );
         Test.stopTest();
@@ -80,27 +35,7 @@ public class ProgressNoteReminderControllerTest {
         // System.assertEquals(customEncounter.Id, createdTask.Encounter__c, 'The Encounter__c should match the input.');  // Uncomment if custom object is used
     }
 
-    @isTest
-    static void testGetContactIdForCase() {
-        // Setup necessary records
-        Contact testContact = new Contact(FirstName = 'John', LastName = 'Doe');
-        insert testContact;
-	
-        Case testCase = new Case(
-            ContactId = testContact.Id,
-            Subject = 'Test Case'
-     
-        );
-        insert testCase;
-
-        // Call getContactIdForCase method
-        Test.startTest();
-        String contactName = ProgressNoteReminderController.getContactIdForCase(testCase.Id);
-        Test.stopTest();
-
-        // Verify the result
-        System.assertEquals('John Doe', contactName, 'The Contact Name should match the test data.');
-    }
+   
       @isTest
     static void testGetReminderPicklistValues() {
         // Call the getReminderPicklistValues method
@@ -111,21 +46,10 @@ public class ProgressNoteReminderControllerTest {
         // Verify the returned map is not null
         System.assertNotEquals(null, picklistValues, 'The picklist values map should not be null.');
 
-        // Verify the 'type' key exists and contains values
-        // List<Map<String, String>> typeOptions = picklistValues.get('type');
-        // System.assertNotEquals(null, typeOptions, 'The type picklist values should not be null.');
-        // Assert.isTrue(typeOptions.size() > 0, 'The type picklist values should not be empty.');
-
-        // Verify the 'priority' key exists and contains values
+       
         List<Map<String, String>> priorityOptions = picklistValues.get('priority');
         System.assertNotEquals(null, priorityOptions, 'The priority picklist values should not be null.');
        Assert.isTrue(priorityOptions.size() > 0, 'The priority picklist values should not be empty.');
-
-        // Additional checks to verify the content of the picklist values
-        // for (Map<String, String> option : typeOptions) {
-        //     System.assertNotEquals(null, option.get('value'), 'The value of the type picklist option should not be null.');
-        //     System.assertNotEquals(null, option.get('label'), 'The label of the type picklist option should not be null.');
-        // }
 
         for (Map<String, String> option : priorityOptions) {
             System.assertNotEquals(null, option.get('value'), 'The value of the priority picklist option should not be null.');
